fix de following y algunos cambios sugeridos por Android Lint